# rust-todo-api

./: .env  Cargo.toml  Dockerfile
sql/: todo.sql
src/: main.rs
src/middleware/: authmiddleware.rs
src/services/: db.rs  mod.rs  todos.rs  users.rs
src/types/: error.rs  mod.rs  todo.rs  user.rs
