[package]
name = "apie"
version = "0.1.0"
authors = ["MeNoln <mark22dom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.5.1"
iron-cors = "0.5.1"
router = "0.5.1"
chrono = "0.4"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
dotenv = "0.9.0"
postgres = "0.19.0"
bodyparser = "0.7.0"
sha256 = "1.0.0"